# 21sh

./: README.md  polka.cc
autotools/: Makefile.am  configure.ac
autotools/src/: Makefile  Makefile.am  Makefile.in
autotools/src/ast/: Makefile  Makefile.am  Makefile.in
autotools/src/lexer/: Makefile  Makefile.am  Makefile.in
autotools/src/parser/: Makefile  Makefile.am  Makefile.in
ll-expr/: Makefile
ll-expr/src/ast/: ast.h
ll-expr/src/eval/: ast_print.c  rpn_print.c
ll-expr/src/lexer/: lexer.c  lexer.h  token.h
ll-expr/src/parser/: parser.c  parser.h
mypipe/: mypipe.c
myredir/: myredir.c
