AC_INIT([42sh], [1.0], [alexandre.girold@epita.fr])
AM_INIT_AUTOMAKE([foreign -Wall -Werror])
AC_PROG_CC
AC_CONFIG_HEADERS([config.h])
AC_CONFIG_FILES([
                Makefile 
                src/Makefile
                src/ast/Makefile
                src/lexer/Makefile
                src/parser/Makefile
                 ])
AC_OUTPUT
